Fix ui on safari & ios metamask

--- a/public/css/desktop-presale.css
+++ b/public/css/desktop-presale.css
@@ -209,6 +209,7 @@
     }
 
     .round-progress-bar-mask-l, .round-progress-bar-mask-r {
+        height: 100%;
     }
 
     .round-progress-bar-mask-m {
